Move render info blurb out of redditfooter to avoid caches.
RedditFooter is a CachedTemplate and so the blurb which is supposed to
be unique to each request is being rendercached.

--- a/r2/r2/templates/reddit.html
+++ b/r2/r2/templates/reddit.html
@@ -166,6 +166,7 @@
       %endif
     %endif
     ${framebuster()}
+    <p class="bottommenu debuginfo"><span class="icon">&pi;</span>&nbsp;<span class="content">Rendered by PID ${g.reddit_pid} on ${g.reddit_host} at ${c.start_time} running ${g.short_version}.</span></p>
   </body>
 </%def>
 
