Darken "mellow" infobar border.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -1155,7 +1155,7 @@ a.author { margin-right: 0.5em; }
 
 .infobar.mellow {
     background-color: #eff8ff;
-    border: 1px solid #bfe0ff;
+    border: 1px solid #93abc2;
 }
 
 .infobar.gold {
