Update links on the rules page

--- a/r2/r2/templates/rulespage.html
+++ b/r2/r2/templates/rulespage.html
@@ -64,7 +64,7 @@ function toggle_expando(elem){
     <p class="info">reddit is a pretty open platform and free speech place, but there are a few rules:</p>
     <ol class="rule-list">
       <li id="spam" class="first-rule">
-        <p>Don't&#32;<a href="http://www.reddit.com/help/faq#Whatconstitutesspam">spam</a>.</p>
+        <p>Don't&#32;<a href="http://www.reddit.com/wiki/faq#wiki_what_constitutes_spam.3F">spam</a>.</p>
         ${expando_start("What is spam?")}
           ${bad_example('Submitting only links to your blog or personal website.')}
           ${good_example('Submitting links from a variety of sites and sources.')}
@@ -73,7 +73,7 @@ function toggle_expando(elem){
         ${expando_end()}
       </li>
       <li id="votecheating">
-        <p>Don't engage in vote&#32;<a href="http://www.reddit.com/help/faq#Whatconstitutescheating">cheating or manipulation</a>.</p>
+        <p>Don't engage in vote&#32;<a href="http://www.reddit.com/wiki/faq#wiki_what_constitutes_cheating.3F">cheating or manipulation</a>.</p>
         ${expando_start("What does vote cheating look like?")}
           ${bad_example('Buying upvotes from other people.')}
           ${good_example('Sharing reddit links with your friends.')}
@@ -82,7 +82,7 @@ function toggle_expando(elem){
         ${expando_end()}
       </li>
       <li id="personalinfo">
-        <p>Don't post&#32;<a href="http://www.reddit.com/help/faq#Ispostingpersonalinformationok">personal information</a>.</p>
+        <p>Don't post&#32;<a href="http://www.reddit.com/wiki/faq#wiki_is_posting_personal_information_ok.3F">personal information</a>.</p>
         ${expando_start("What might be personal information?")}
           ${bad_example("Posting a link to your friend's facebook profile.")}
           ${good_example("Posting your senator's publicly available contact information")}
@@ -97,14 +97,14 @@ function toggle_expando(elem){
         <p>Don't break the site or do anything that interferes with normal use of the site.</p>
         ${expando_start("Tell me more.")}
           ${bad_example('Creating programs that request information more than once every 2 seconds or violate any of our other <a href="https://github.com/reddit/reddit/wiki/API">&nbsp;API rules</a>.')}
-          ${good_example('Responsibly <a href="/help/whitehat">&nbsp;reporting security&nbsp;</a> issues to us.', leadin="AWESOME:")}
+          ${good_example('Responsibly <a href="/wiki/whitehat">&nbsp;reporting security&nbsp;</a> issues to us.', leadin="AWESOME:")}
         ${expando_end()}
       </li>
       <!--  Also, 'reddit' is STRICTLY lowercase -->
     </ol>
   </div>
   <div id="followreddiquette" class="info">
-    <p>This last bit isn't a rule, but you should also be mindful of <a href="/help/reddiquette">&nbsp;reddiquette</a>, an&nbsp;<em>informal</em>&nbsp;expression of reddit's community values as written by the community itself. Please abide by it the best you can.</p>
+    <p>This last bit isn't a rule, but you should also be mindful of <a href="/wiki/reddiquette">&nbsp;reddiquette</a>, an&nbsp;<em>informal</em>&nbsp;expression of reddit's community values as written by the community itself. Please abide by it the best you can.</p>
   </div>
   <div class="info">
   <img id="brick" class="bottom" title="${_("here at reddit, we inscribe our rules on a brick. screw tablets.")}" alt="${_('this brick has no semantic value')}" src="${static('brick.png')}">
