--- a/r2/r2/templates/over18.html
+++ b/r2/r2/templates/over18.html
@@ -26,7 +26,7 @@
   <p class="error">
     ${_("you must be at least eighteen to view this reddit")}
   </p>
-  <img src="${static('over18.png')}" alt="" />
+  <img src="${static('over18.png')}" alt="" height="254" width="180" />
   
   <form method="post" action="" class="pretty-form"
       ${"target='_top'" if c.cname else ""}>
