--- a/r2/r2/templates/passwordverificationform.html
+++ b/r2/r2/templates/passwordverificationform.html
@@ -28,7 +28,7 @@
 <%namespace file="utils.html" import="error_field"/>
 
 <div class="content over18" style="text-align: center">
-  <img src="${static('over18.png')}" alt="" />
+  <img src="${static('over18.png')}" alt="" height="254" width="180" />
 
   <h1>let me see your papers</h1>
 
