wiki: Fix hidden revision visuals not working in opera.

--- a/r2/r2/public/static/css/wiki.less
+++ b/r2/r2/public/static/css/wiki.less
@@ -47,6 +47,10 @@
             .revision.hidden {
                 opacity: .5;
             }
+            // Opera does not inherit the opacity to the td
+            .revision.hidden td {
+                opacity: inherit;
+            }
         }
 
         // Page content 
