Point old wiki gold links to /gold/about

--- a/r2/r2/templates/gold.html
+++ b/r2/r2/templates/gold.html
@@ -81,7 +81,7 @@
 
 <div class="gold-form">
   <h1 class="goldgift">
-    ${_("reddit gold")} (<a href="/help/gold">help</a>)
+    ${_("reddit gold")} (<a href="/gold/about">help</a>)
   </h1>
 
   <form class="content">
