--- a/r2/r2/templates/gold.html
+++ b/r2/r2/templates/gold.html
@@ -93,7 +93,7 @@
     ${radio_type("goldtype", "gift", _("Give reddit gold to someone else"),
       "", thing.goldtype == "gift")}<br/>
     ${radio_type("goldtype", "creddits", _('Buy reddit gold "creddits"'),
-      unsafe("<a href='/help/creddits'>details</a>"),
+      unsafe("<a href='/wiki/creddits'>details</a>"),
       thing.goldtype == "creddits")}<br/>
     </%utils:round_field>
   </form>
