--- a/r2/r2/templates/messagecompose.html
+++ b/r2/r2/templates/messagecompose.html
@@ -106,7 +106,7 @@ function admincheck(elem) {
        <li>If you think your posts are being caught in the spam filter,
          please write to
          &#32;
-         <a href="http://www.reddit.com/help/faq#HowcanItellwhomoderatesagivenreddit">
+         <a href="http://www.reddit.com/wiki/faq#wiki_how_can_i_tell_who_moderates_a_given_reddit.3F">
           the moderators of the subreddit
          </a>
          &#32;
@@ -120,7 +120,7 @@ function admincheck(elem) {
          inquiring about, and that's actually the reason you're writing, please
          message 
          &#32;
-         <a href="http://www.reddit.com/help/faq#HowcanItellwhomoderatesagivenreddit">
+         <a href="http://www.reddit.com/wiki/faq#wiki_how_can_i_tell_who_moderates_a_given_reddit.3F">
           all of the moderators of the subreddit
          </a>
          &#32; (using the "message the mods" feature located at the top of the
