--- a/r2/r2/templates/newlink.html
+++ b/r2/r2/templates/newlink.html
@@ -115,7 +115,7 @@ ${thing.captcha}
         target="_blank"),
       good_reddiquette=dict(
         link_text=_("good reddiquette"),
-        path="/help/reddiquette",
+        path="/wiki/reddiquette",
         target="_blank"),
   )}
 </div>
