--- a/r2/r2/templates/pagenamenav.html
+++ b/r2/r2/templates/pagenamenav.html
@@ -43,7 +43,7 @@
 
 <%def name="help()">
   <span class="hover pagename redditname">
-    ${plain_link(thing.title, "/help", _sr_path=False)}
+    ${plain_link(thing.title, "/wiki", _sr_path=False)}
   </span>
 </%def>
 
