--- a/r2/r2/templates/prefoptions.html
+++ b/r2/r2/templates/prefoptions.html
@@ -281,7 +281,7 @@
       &#32;
       <span class="little gray">
         (
-        <a href="http://www.reddit.com/help/noindex">${_("details")}</a>
+        <a href="http://www.reddit.com/wiki/noindex">${_("details")}</a>
         )
       </span>
       <br />
@@ -289,7 +289,7 @@
       &#32;
       <span class="little gray">
        (
-         <a href="http://www.reddit.com/help/localjs">
+         <a href="http://www.reddit.com/wiki/localjs">
            ${_("details")}
          </a>
        )
