--- a/r2/r2/templates/feedbackblurb.html
+++ b/r2/r2/templates/feedbackblurb.html
@@ -34,7 +34,7 @@
 
   <dl>
     <dt>Making a press inquiry?</dt>
-    <dd><a href="/help/press">Get our press contact details</a>.</dd>
+    <dd><a href="/wiki/press">Get our press contact details</a>.</dd>
     <dt>Are your submissions not showing up?  Subreddit marked as spam?  Is the spam filter acting up?</dt>
     <dd>
       &#32;<a href="/message/compose?to=${g.admin_message_acct|u}">Send a private message to the admins.</a>&#32;(We really do want to help)
