--- a/r2/r2/templates/redditfooter.html
+++ b/r2/r2/templates/redditfooter.html
@@ -48,9 +48,9 @@
             _("Use of this site constitutes acceptance of our "
               "%(user_agreement)s and %(privacy_policy)s"), nocname=True,
       user_agreement = dict(link_text=_("User Agreement {Genitive}"),
-                            path="http://reddit.com/help/useragreement"),
+                            path="http://reddit.com/wiki/useragreement"),
       privacy_policy = dict(link_text=_("Privacy Policy {Genitive}"),
-                            path="http://reddit.com/help/privacypolicy"))}.
+                            path="http://reddit.com/wiki/privacypolicy"))}.
     &copy; ${_("%(year)d reddit inc. All rights reserved.") % \
     dict(year=datetime.datetime.now().timetuple()[0])}
   </p>
