--- a/r2/r2/templates/searchform.html
+++ b/r2/r2/templates/searchform.html
@@ -47,10 +47,10 @@
   </dl>
 
   <p>e.g.&#32;<code>reddit:aww site:imgur.com dog</code></p>
-  <p><a href="http://www.reddit.com/help/search">${_('see the search faq for details.')}</a></p>
+  <p><a href="http://www.reddit.com/wiki/search">${_('see the search faq for details.')}</a></p>
   </div>
 
-  <p><a href="http://www.reddit.com/help/search" id="search_showmore">${_('advanced search: by author, community...')}</a></p>
+  <p><a href="http://www.reddit.com/wiki/search" id="search_showmore">${_('advanced search: by author, community...')}</a></p>
 </%def>
 
 <form action="${add_sr('/search')}" id="search" role="search">
