wiki: Set .toc to have a max-width of 300px;

--- a/r2/r2/public/static/css/wiki.less
+++ b/r2/r2/public/static/css/wiki.less
@@ -126,6 +126,7 @@
             margin-right: 0;
             border: 1px solid #8D9CAA;
             list-style: none;
+            max-width: 300px;
         }
         .md.wiki > .toc > ul ul {
             margin: 4px 0;
