--- a/r2/r2/templates/login.html
+++ b/r2/r2/templates/login.html
@@ -81,7 +81,7 @@
             ${_('account recovery email')}: &nbsp;<i>(${_('optional')})
           </i></label>
           <input value="" name="email" id="email_${op}" 
-                 type="text" maxlength="50" tabindex="${tabindex}"/>
+                 type="email" maxlength="50" tabindex="${tabindex}"/>
           <label for="email_${op}" class="note">${_('we will only send email at your request')}</label>
           %if register:
             ${error_field("BAD_EMAILS", "email", kind="span")}
