Open stripe to all countries.

--- a/r2/r2/templates/goldpayment.html
+++ b/r2/r2/templates/goldpayment.html
@@ -206,12 +206,7 @@
       </tr>
       <tr>
         <th><label>${_('country')}</label></th>
-        <td>
-          <select class="card-address_country" title=${_('country')}>
-            <option value="US">United States</option>
-            <option value="Canada">Canada</option>
-          </select>
-        </td>
+        <td><input type="text" class="card-address_country"></td>
       </tr>
       <tr>
         <th><label>${_('zip')}</label></th>
