prefoptions: Update "volunteer to translate" link.
This is deliberately an absolute link so that open-source installs will
contribute back to the main i18n repository.

--- a/r2/r2/templates/prefoptions.html
+++ b/r2/r2/templates/prefoptions.html
@@ -92,7 +92,7 @@
       ${language_tool(allow_blank = False, show_regions = True,
                       default_lang = c.user.pref_lang)}
       &#32;<span class="little gray hover">(*) ${_("incomplete")}
-      &#32;${plain_link(_("volunteer to translate"), "/i18n")}</span>
+      &#32;<a href="http://www.reddit.com/r/i18n/wiki/getting_started">${_("volunteer to translate")}</a></span>
     </td>
   </tr>
   <tr>
