Replace reddit_first cookie with client side logic.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -1170,6 +1170,7 @@ a.author { margin-right: 0.5em; }
 }
 
 .infobar.welcome {
+    display: none;
     background: url(../welcome-lines.png) top center;
     border: 1px solid #ff8b60;
     padding: 0;
