Allow gold users to optionally receive inbox replies to posts.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -5333,6 +5333,10 @@ body:not(.gold) .allminus-link {
     max-width: 550px;
 }
 
+.gold-accent.roundfield {
+    margin-top: 0px;
+}
+
 .gold-form {
     font-family: "Hoefler Text","Palatino Linotype","Book Antiqua", Palatino,georgia,garamond,FreeSerif,serif;
     min-height: 600px;
